# alpasim

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  README.md  grpc.Dockerfile  physics.Dockerfile  pyproject.toml  setup_local_env.sh  splatsim.Dockerfile  trafficsim.Dockerfile
.github/workflows/: publish-grpc-slim.yml  publish-sim-images.yml
docker/: trafficsim.Dockerfile
docker/carla/: entrypoint_physics.sh  physics.Dockerfile  trafficsim.Dockerfile
docker/carla/carla_physics_server/: __init__.py  pyproject.toml  server.py
docker/carla/carla_trafficsim_server/: __init__.py  carla_session.py  grpc_adapter.py  pyproject.toml  scenario_runner.py  server.py
docker/carla/carla_trafficsim_server/tests/: test_grpc_handlers.py
docker/physics/: simple.Dockerfile
docs/: DATA_PIPELINE.md  OPERATIONS.md  TELEMETRY.md  TUTORIAL.md
src/controller/: pyproject.toml
src/driver/: pyproject.toml
src/driver/src/alpasim_driver/: main.py  point_cloud_cache.py  schema.py
src/driver/src/alpasim_driver/models/: __init__.py  base.py
src/driver/src/alpasim_driver/tests/: test_route_wiring.py
src/grpc/: pyproject.toml
src/grpc/alpasim_grpc/v0/: egodriver.proto  logging.proto  physics.proto  sensorsim.proto  traffic.proto
src/grpc/scripts/: compile_protos.py
src/physics/: README.md  pyproject.toml
src/physics/alpasim_physics/: carla_clock.py  entrypoint.sh  server.py
src/runtime/: pyproject.toml
src/runtime/alpasim_runtime/: address_pool.py  config.py  delay_buffer.py  event_loop.py  nre_introspection.py  scene_loader.py  types.py  unbound_rollout.py  validation.py
src/runtime/alpasim_runtime/daemon/: engine.py  scheduler.py
src/runtime/alpasim_runtime/events/: base.py  camera.py  lidar.py  physics.py
src/runtime/alpasim_runtime/replay_services/: asl_reader.py  sensorsim_replay_service.py  traffic_replay_service.py
src/runtime/alpasim_runtime/services/: controller_service.py  driver_service.py  physics_service.py  sensorsim_service.py  service_base.py  session_configs.py  traffic_service.py
src/runtime/alpasim_runtime/simulate/: __main__.py
src/runtime/alpasim_runtime/telemetry/: plot_metrics.py  rpc_wrapper.py  telemetry_context.py
src/runtime/alpasim_runtime/worker/: ipc.py  main.py  runtime.py
src/runtime/tests/: test_address_pool.py  test_daemon_engine.py  test_daemon_main.py  test_daemon_scheduler.py  test_delay_buffer.py  test_event_loop.py  test_nre_introspection.py  test_runtime_integration_replay.py  test_telemetry_context.py  test_unbound_rollout.py  test_with_mocks.py
src/runtime/tests/data/integration/: generated-user-config-0.yaml
src/runtime/tests/data/mock/: user-config.yaml
src/runtime/tests/services/: test_sensorsim_service.py
src/splatsim_renderer/: pyproject.toml
src/splatsim_renderer/alpasim_splatsim_renderer/: __init__.py  lidar_adapter.py  render_adapter.py  scene_loader.py  server.py
src/splatsim_renderer/tests/: test_lidar_adapter.py  test_render_adapter.py  test_server.py
src/tools/: pyproject.toml
src/tools/map_utils/: lanelet2_to_clipgt.py
src/tools/scripts/: start-prometheus-grafana.sh
src/trafficsim/: .release.json  README.md  pyproject.toml
src/trafficsim/alpasim_trafficsim/: __init__.py  carla_session.py  grpc_adapter.py  scenario_runner.py  server.py
src/trafficsim/alpasim_trafficsim/catk/: env_data_adapter.py  map_adapter.py  model_adapter.py  obstacle_classes.py  scene_adapter.py
src/trafficsim/alpasim_trafficsim/catk/smart/: __init__.py
src/trafficsim/alpasim_trafficsim/catk/smart/layers/: __init__.py  attention_layer.py  fourier_embedding.py  mlp_layer.py
src/trafficsim/alpasim_trafficsim/catk/smart/model/: smart.py
src/trafficsim/alpasim_trafficsim/catk/smart/modules/: agent_decoder.py  map_decoder.py  smart_decoder.py
src/trafficsim/alpasim_trafficsim/catk/smart/tokens/: token_processor.py
src/trafficsim/alpasim_trafficsim/catk/smart/utils/: __init__.py  geometry.py  rollout.py  weight_init.py
src/trafficsim/alpasim_trafficsim/config/: __init__.py  server.yaml
src/trafficsim/alpasim_trafficsim/grpc/: __init__.py  catk_predictor.py  catk_trafficsim.py  config.py  service_structures.py  servicer.py
src/trafficsim/alpasim_trafficsim/grpc/pipeline/: __init__.py  env_builder.py  laneline_elevation.py  response_builder.py
src/trafficsim/alpasim_trafficsim/grpc/session/: __init__.py  factory.py  history.py
src/trafficsim/tests/: conftest.py  test_catk_integration.py  test_grpc_handlers.py  test_laneline_elevation.py  test_service.py  test_sparse_history_freeze.py  test_usdz_data_folder.py  test_usdz_loader_indexing.py
src/utils/: pyproject.toml
src/utils/alpasim_utils/: _dgs_io.py  artifact.py  geometry.py  lanelet2_postprocess.py  lanelet2_to_clipgt.py  scenario.py  types.py
src/utils/alpasim_utils/telemetry/: __init__.py  alpasim-runtime-dashboard.json  metrics_plot_recording_rules.yml
src/utils/tests/: test_lanelet2_to_clipgt.py  test_polyline.py
src/utils_rs/: utils_rs.pyi
src/wizard/: pyproject.toml
src/wizard/alpasim_wizard/: configuration.py  context.py  schema.py  services.py  utils.py  wizard.py
src/wizard/alpasim_wizard/deployment/: docker_compose.py  slurm.py
src/wizard/alpasim_wizard/telemetry/: __init__.py  prometheus.py  slurm_process_exporter.py
src/wizard/alpasim_wizard/telemetry/resources/: prometheus_sidecar.sh
src/wizard/configs/: base_config.yaml
src/wizard/configs/deploy/: local_arm.yaml
src/wizard/configs/driver/: oneplanner.yaml
src/wizard/configs/lidars/: 1lidar_pandar.yaml
src/wizard/configs/physics/: carla.yaml
src/wizard/configs/renderer/: splatsim.yaml
src/wizard/configs/topology/: 2gpu.yaml  8gpu_64rollouts.yaml  8gpu_no_replicas.yaml
src/wizard/configs/trafficsim/: carla.yaml  catk.yaml  default.yaml
src/wizard/patches/oneplanner/: README.md  driver_preprocessing.py  encoder.py  model_loader.py
src/wizard/tests/: test_docker_compose_deployment.py  test_runtime_server_mode.py  test_slurm_deployment.py  test_slurm_process_exporter.py
(+27 files in other folders)
