[project]
name = "alpasim_workspace"
version = "0.91.0"
description = "Workspace for Alpamayo Sim development"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]

[project.optional-dependencies]
# -- Per-member extras (install a single package + its transitive deps) --
plugins = ["alpasim_plugins"]
controller = ["alpasim_controller"]
eval = ["alpasim_eval"]
grpc = ["alpasim_grpc"]
runtime = ["alpasim-runtime"]
utils = ["alpasim_utils"]
physics = ["alpasim-physics"]
tools = ["alpasim-tools"]
driver = ["alpasim_driver"]
wizard = ["alpasim_wizard"]

# -- Composite extras --
# All core (non-plugin) packages
all = [
  "alpasim_plugins",
  "alpasim_controller",
  "alpasim_eval",
  "alpasim_grpc",
  "alpasim-runtime",
  "alpasim_utils",
  "alpasim-physics",
  "alpasim-tools",
  "alpasim_driver",
  "alpasim_wizard",
]

# -- Plugin extras --
transfuser = ["alpasim_transfuser"]

[tool.uv.workspace]
members = [
  "src/plugins",
  "src/controller",
  "src/eval",
  "src/grpc",
  "src/runtime",
  "src/wizard",
  "src/utils",
  "src/utils_rs",
  "src/physics",
  "src/tools",
  "src/driver",
  "plugins/*",
]

[tool.uv.sources]
alpasim_plugins = { workspace = true }
alpasim_controller = { workspace = true }
alpasim_eval = { workspace = true }
alpasim_grpc = { workspace = true }
alpasim-runtime = { workspace = true }
alpasim_utils = { workspace = true }
alpasim-physics = { workspace = true }
alpasim-tools = { workspace = true }
alpasim_driver = { workspace = true }
alpasim_transfuser = { workspace = true }
alpasim_wizard = { workspace = true }
trajdata-alpasim = { git = "https://github.com/NVlabs/trajdata", rev = "3caf3a8bd1a68f4a1545352aea82c535be9510b2" }
"3dgs-io" = { git = "https://github.com/autowarefoundation/3dgs_io", branch = "feat/usdz-io" }

[tool.uv]
python-preference = "only-managed"
exclude-newer = "3 days"
override-dependencies = [
  # flash-attention is an AR1/A1.5 dependency, but it doesn't work with uv
  # because its own pyproject.toml does not declare its own dependencies
  # properly, leading to uv install errors.
  # TODO: make flash attention optional in alpamayo-r1 and alpamayo1.5 repos.
  "flash-attn; python_version < '0'",
  # av is an optional dependency of pyAV (from torchvision), and it is in conflict
  # with maglev.av both of which can be important as `import av`. Since torchvision
  # handles the case where av is not available, we can skip installing it keeping maglev.av functional.
  "av; python_version < '0'",
  # hyperqueue is a vam dependency for HPC job scheduling, only available on Linux x86_64.
  # Not needed for local driver runs.
  "hyperqueue; python_version < '0'",
  # vam pins torchmetrics==1.4.3, alpamayo-r1 pins torchmetrics==1.8.2.
  # Override to the newer version; vam works fine with 1.8.2.
  "torchmetrics>=1.8.2",
  # `lightning` (transitive via vam==2.4.0) is quarantined on PyPI after the
  # April 30 2026 supply-chain compromise of versions 2.6.2/2.6.3 (TeamPCP
  # campaign). Project-wide quarantine blocks fresh installs of every version,
  # including 2.4.0, breaking AlpaSim wizard daemon launches. Pull the GitHub
  # SHA-pinned archive tarball (immune to tag retargeting, identical SHA to
  # the git tag 2.4.0) — git+https of this repo's full history is too large
  # to fetch reliably from the slurm runner network.
  "lightning @ https://github.com/Lightning-AI/pytorch-lightning/archive/2129fdf3622e39ba46be4e1139af408e7e951cf3.tar.gz",
]
constraint-dependencies = [
  # setuptools 82+ removed pkg_resources, which grpcio-tools 1.62.3 still needs.
  # Remove this constraint when grpcio-tools and protobuf are upgraded to 5.x+.
  "setuptools<82",
]
