[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim_controller"
version = "0.59.0"
description = "A simple, open source controller + vehicle model"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "do_mpc",
    "pytest",
    "matplotlib",
    "osqp",
    "scipy",
    "pyyaml",
    "alpasim_grpc",
    "alpasim_utils[geometry]",
    "alpasim_plugins",
]
authors = [
    {name = "Michael Watson", email = "mwatson@nvidia.com"},
]

[project.entry-points."alpasim.mpc"]
linear = "alpasim_controller.mpc_impl.linear_mpc:LinearMPC"
nonlinear = "alpasim_controller.mpc_impl.nonlinear_mpc:NonlinearMPC"

[tool.setuptools.packages.find]
include = [ "alpasim_controller", "benchmark", "tests" ]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
alpasim_grpc = {workspace = true}
alpasim_utils = {workspace = true}
alpasim_plugins = {workspace = true}
