[build-system]
requires = [ "hatchling>=1.26", "grpcio-tools", "protobuf>=4.0.0,<5.0.0", "setuptools<82" ]
build-backend = "hatchling.build"

[project]
name = "alpasim_grpc"
version = "0.54.0"
description = "gRPC API definitions for Alpamayo Sim"
# Loosened to >=3.10 so the trafficsim container (Python 3.10, required by
# autoware_carla_scenario / lanelet2-python-api-for-autoware) can consume
# generated proto stubs.
requires-python = ">=3.10,<3.13"
dependencies = [
  "grpcio",
  "grpcio-tools",
  "setuptools<82",  # pkg_resources removed in v82; grpcio-tools still imports it
  "dataclasses-json>=0.6.7",
  "protobuf>=4.0.0,<5.0.0",
  "numpy",
  "pytest",
  "pytest-asyncio",
]

  [[project.authors]]
  name = "Michal Tyszkiewicz"
  email = "mtyszkiewicz@nvidia.com"

  [project.scripts]
  compile-protos = "scripts.compile_protos:compile_protos"
  clean-protos = "scripts.compile_protos:clean_proto_files"

[tool.hatch.build.targets.wheel]
packages = [ "alpasim_grpc", "scripts" ]
artifacts = [
  "alpasim_grpc/**/*.proto",
  "alpasim_grpc/**/*_pb2.py",
  "alpasim_grpc/**/*_pb2_grpc.py",
  "alpasim_grpc/**/*.pyi",
  "alpasim_grpc/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "alpasim_grpc/**/*.proto",
  "alpasim_grpc/**/__init__.py",
  "alpasim_grpc/py.typed",
  "hatch_build.py",
  "pyproject.toml",
  "README.md",
  "scripts/**/*.py",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
