[build-system]
requires = [ "setuptools>=64" ]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim-physics"
version = "1.49.0"
description = "Physics micro-service of the Alpamayo Sim"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alpasim_grpc",
  "alpasim_utils",
  "numpy",
  "warp-lang",
  "pyyaml",
  "dataclasses_json",
  "pytest"
]

  [[project.authors]]
  name = "Riccardo de Lutio"
  email = "rdelutio@nvidia.com"

  [project.optional-dependencies]
  vis = [ "polyscope" ]
  local = [ "gradio" ]

[tool.uv.sources]
alpasim_grpc = {workspace = true}
alpasim_utils = {workspace = true}

[tool.setuptools]
packages = [ "alpasim_physics" ]
