[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim-trafficsim"
version = "0.1.0"
description = "Traffic simulation micro-service for Alpasim (CARLA TrafficManager backend)"
# Pinned to Python 3.10 because autoware_carla_scenario depends on
# lanelet2-python-api-for-autoware which ships a CPython 3.10 ABI wheel only.
requires-python = ">=3.10,<3.11"
dependencies = [
  "alpasim_grpc",
  # alpasim_utils is intentionally NOT a dependency: it pulls in the
  # utils_rs Rust extension which currently ships wheels for Python 3.11+ only.
  # The trafficsim container needs Python 3.10, so it ships a small in-package
  # proto helper (alpasim_trafficsim.grpc_adapter) instead.
  "grpcio",
  "numpy",
  "omegaconf",
  "pyyaml",
]

[project.optional-dependencies]
# autoware_carla_scenario is fetched via git in the trafficsim container
# (see docker/trafficsim.Dockerfile). It pulls in carla==0.9.16 through its
# own `carla-0-9-16` extras and the lanelet2 binding.
carla = [
  "autoware_carla_scenario[carla-0-9-16]",
]
dev = [
  "pytest",
  "pytest-asyncio",
]

[project.scripts]
trafficsim_server = "alpasim_trafficsim.server:main"

[tool.uv.sources]
alpasim_grpc = { path = "../grpc", editable = true }
autoware_carla_scenario = { git = "https://github.com/tier4/autoware_lanelet2_to_opendrive.git", subdirectory = "autoware_carla_scenario", rev = "6875ab0aa4eab8812f4c9b0fa7d34398dbb620f5" }

[tool.setuptools.packages.find]
where = ["."]
include = ["alpasim_trafficsim*"]
