[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim_utils"
version = "0.52.0"
description = "Utility functions for Alpamayo Sim"
# Loosened to >=3.10 so the trafficsim container (Python 3.10, required by
# autoware_carla_scenario) can pull in pose / trajectory helpers.
requires-python = ">=3.10,<3.13"
dependencies = [
  "alpasim_grpc",
  "dataclasses-json>=0.6.7",
  "typing-inspect>=0.9.0",  # Required for dataclasses-json with mypy-extensions>=1.0
  "numpy",
  "scipy",
  "aiofiles",
  "csaps",
  "imageio[ffmpeg]",
  "omegaconf",
  "pandas",
  "pytest",
  "pytest-asyncio",
  "trajdata-alpasim",
]

[project.optional-dependencies]
geometry = [
  "utils_rs",
]

[project.scripts]
asl-to-frames = "alpasim_utils.asl_to_frames.__main__:main"
print-asl = "alpasim_utils.print_asl.__main__:main"

[[project.authors]]
name = "Michal Tyszkiewicz"
email = "mtyszkiewicz@nvidia.com"

[tool.uv.sources]
alpasim_grpc = {workspace = true}
utils_rs = {workspace = true}

[tool.setuptools.packages.find]
where = ["."]
include = ["alpasim_utils*"]

[tool.setuptools.package-data]
"alpasim_utils.telemetry" = ["*.json", "*.yml"]
