[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim_wizard"
version = "0.0.1"
requires-python = ">=3.11.0,<3.13.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "alpasim-utils",
    "hydra-core",
    "pyYAML",
    "GitPython",
    "pandas",
    "polars>=1.0.0",
    "pyarrow",
    "filelock",
    "boto3",
    "huggingface_hub",
    "tqdm",
    "typing-extensions",
    "pytest",
    "pytest-asyncio",
    "pandas-stubs",
    "types-PyYAML",
]

[tool.uv.sources]
alpasim-utils = {workspace = true}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
# Include the wizard package and the Hydra SearchPathPlugin namespace package.
# hydra_plugins/ is a namespace package (no __init__.py) that Hydra auto-discovers
# at startup, enabling automatic config search path registration from plugins.
include = ["alpasim_wizard*", "hydra_plugins*"]

[tool.setuptools.package-data]
alpasim_wizard = ["telemetry/resources/*.sh"]

[project.scripts]
alpasim_wizard = "alpasim_wizard.__main__:main"
alpasim_check_config = "alpasim_wizard.check_config:main"
